# manageapp

./: .style.yapf  PROJECT_PLAN.md  README.md
backend/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_households.py  003_invitations.py  004_add_user_phone_number.py  005_make_invitation_datetimes_timezone_aware.py  006_user_preferences.py  007_todos.py
backend/app/: __init__.py  main.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  deployment.py  security.py
backend/app/models/: __init__.py  household.py  household_member.py  invitation.py  todo.py  todo_claim.py  todo_completion.py  todo_share.py  user.py  user_preferences.py
backend/app/schemas/: __init__.py  household.py  invitation.py  todo.py  user.py  user_preferences.py
backend/app/services/: __init__.py  email.py  household_service.py  invitation_service.py  invitation_utils.py  todo_service.py  user_preferences_service.py
backend/docs/: DEPLOYMENT.md  EMAIL_PROVIDER_ALTERNATIVES.md
backend/scripts/: sync-requirements.sh
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_deployment_integration.py  test_households_api.py  test_invitations_api.py  test_security_integration.py  test_todo_api_integration.py  test_todo_models_integration.py  test_todo_visibility_integration.py  test_user_preferences_api.py
backend/tests/unit/: test_deployment.py  test_household_authz.py  (+12 more)
(+46 files in other folders)
