[project]
name = "manageapp-backend"
version = "1.0.0"
description = "Household Management API Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "sqlalchemy==2.0.23",
  "alembic==1.12.1",
  "psycopg2-binary==2.9.9",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.6",
  "email-validator==2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.yapf]
based_on_style = "pep8"
indent_width = 2
column_limit = 80

